Further tweaks and fixes to the welcome mode.
- Fix typos
- Fix layout on OS X

--- a/src/plugins/welcome/communitywelcomepagewidget.ui
+++ b/src/plugins/welcome/communitywelcomepagewidget.ui
@@ -132,7 +132,7 @@
       <item>
        <widget class="Utils::WelcomeModeTreeWidget" name="supportSitesTreeWidget">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
