--- a/src/plugins/qt4projectmanager/gettingstartedwelcomepagewidget.ui
+++ b/src/plugins/qt4projectmanager/gettingstartedwelcomepagewidget.ui
@@ -14,19 +14,22 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
    <property name="bottomMargin">
     <number>2</number>
    </property>
    <item row="2" column="0">
     <widget class="QFrame" name="contentframe">
      <property name="styleSheet">
-      <string notr="true">#contentframe{
-   border: 1px solid #c9c9c9;
-   border-radius: 3px;
-   padding: 2px;
-   background: #f9f9f9;
-   margin: 1px;
-}</string>
+      <string notr="true"/>
      </property>
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
@@ -245,32 +248,10 @@
                <property name="sizeHint" stdset="0">
                 <size>
                  <width>20</width>
-                 <height>2</height>
+                 <height>13</height>
                 </size>
                </property>
               </spacer>
-             </item>
-             <item row="1" column="0">
-              <widget class="QToolButton" name="prevTipBtn">
-               <property name="styleSheet">
-                <string notr="true">QToolButton{
-	border-right:solid 0 px;
-	height:16px;
-	width:12px;
-}
-</string>
-               </property>
-               <property name="text">
-                <string/>
-               </property>
-               <property name="icon">
-                <iconset resource="../welcome/welcome.qrc">
-                 <normaloff>:/welcome/images/arrow-left.png</normaloff>:/welcome/images/arrow-left.png</iconset>
-               </property>
-               <property name="arrowType">
-                <enum>Qt::NoArrow</enum>
-               </property>
-              </widget>
              </item>
              <item row="1" column="1">
               <widget class="QToolButton" name="nextTipBtn">
@@ -294,6 +275,28 @@
                </property>
               </widget>
              </item>
+             <item row="1" column="0">
+              <widget class="QToolButton" name="prevTipBtn">
+               <property name="styleSheet">
+                <string notr="true">QToolButton{
+	border-right:solid 0 px;
+	height:16px;
+	width:12px;
+}
+</string>
+               </property>
+               <property name="text">
+                <string/>
+               </property>
+               <property name="icon">
+                <iconset resource="../welcome/welcome.qrc">
+                 <normaloff>:/welcome/images/arrow-left.png</normaloff>:/welcome/images/arrow-left.png</iconset>
+               </property>
+               <property name="arrowType">
+                <enum>Qt::NoArrow</enum>
+               </property>
+              </widget>
+             </item>
              <item row="2" column="0" colspan="2">
               <spacer name="verticalSpacer_3">
                <property name="orientation">
@@ -302,7 +305,7 @@
                <property name="sizeHint" stdset="0">
                 <size>
                  <width>20</width>
-                 <height>2</height>
+                 <height>13</height>
                 </size>
                </property>
               </spacer>
@@ -383,6 +386,7 @@
        </layout>
       </item>
      </layout>
+     <zorder>createNewProjectButton</zorder>
     </widget>
    </item>
   </layout>
