--- a/src/plugins/welcome/welcomemode.ui
+++ b/src/plugins/welcome/welcomemode.ui
@@ -107,13 +107,13 @@ QToolButton:pressed, QPushButton:pressed{
         <property name="minimumSize">
          <size>
           <width>662</width>
-          <height>500</height>
+          <height>520</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>662</width>
-          <height>500</height>
+          <height>520</height>
          </size>
         </property>
         <property name="styleSheet">
@@ -123,7 +123,13 @@ QToolButton:pressed, QPushButton:pressed{
 	padding:-3;
     padding-bottom:20	;
 }
-</string>
+
+#contentframe{
+   border: none 0px;
+   border-bottom: 1px solid #c9c9c9;
+   background: #ffffff;
+   margin: 0px;
+}</string>
         </property>
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
