Renamed VCSBaseSettingsPage to CommonSettingsPage
To free up the name for an upcoming VCSBaseOptionsPage class that forms
the base for all version control option pages.

Reviewed-by: Friedemann Kleint

--- a/src/plugins/vcsbase/commonsettingspage.ui
+++ b/src/plugins/vcsbase/commonsettingspage.ui
@@ -1,54 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>VCSBaseSettingsPage</class>
- <widget class="QWidget" name="VCSBaseSettingsPage">
+ <class>CommonSettingsPage</class>
+ <widget class="QWidget" name="CommonSettingsPage">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>408</width>
+    <height>148</height>
+   </rect>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QGroupBox" name="commonGroupBox">
-     <layout class="QFormLayout" name="formLayout">
-      <property name="rowWrapPolicy">
-       <enum>QFormLayout::WrapLongRows</enum>
-      </property>
-      <item row="1" column="0">
-       <widget class="QLabel" name="submitMessageCheckScriptLabel">
-        <property name="toolTip">
-         <string>An executable which is called with the submit message in a temporary file as first argument. It should return with an exit != 0 and a message on standard error to indicate failure.</string>
-        </property>
-        <property name="text">
-         <string>Submit message check script:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="Utils::PathChooser" name="submitMessageCheckScriptChooser"/>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="nickNameMailMapLabel">
-        <property name="toolTip">
-         <string>A file listing user names and email addresses in a 4-column mailmap format:
-name &lt;email&gt; alias &lt;email&gt;</string>
-        </property>
-        <property name="text">
-         <string>User/alias configuration file:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="Utils::PathChooser" name="nickNameMailMapChooser"/>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="nickNameFieldsFileLabel">
-        <property name="toolTip">
-         <string>A simple file containing lines with field names like &quot;Reviewed-By:&quot; which will be added below the submit editor.</string>
-        </property>
-        <property name="text">
-         <string>User fields configuration file:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="Utils::PathChooser" name="nickNameFieldsFileChooser"/>
-      </item>
+     <property name="title">
+      <string>Common Settings</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
        <widget class="QCheckBox" name="lineWrapCheckBox">
         <property name="text">
@@ -74,6 +42,59 @@ name &lt;email&gt; alias &lt;email&gt;</string>
          <number>72</number>
         </property>
        </widget>
+      </item>
+      <item row="0" column="2">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="submitMessageCheckScriptLabel">
+        <property name="toolTip">
+         <string>An executable which is called with the submit message in a temporary file as first argument. It should return with an exit != 0 and a message on standard error to indicate failure.</string>
+        </property>
+        <property name="text">
+         <string>Submit message check script:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1" colspan="2">
+       <widget class="Utils::PathChooser" name="submitMessageCheckScriptChooser" native="true"/>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="nickNameMailMapLabel">
+        <property name="toolTip">
+         <string>A file listing user names and email addresses in a 4-column mailmap format:
+name &lt;email&gt; alias &lt;email&gt;</string>
+        </property>
+        <property name="text">
+         <string>User/alias configuration file:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1" colspan="2">
+       <widget class="Utils::PathChooser" name="nickNameMailMapChooser" native="true"/>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="nickNameFieldsFileLabel">
+        <property name="toolTip">
+         <string>A simple file containing lines with field names like &quot;Reviewed-By:&quot; which will be added below the submit editor.</string>
+        </property>
+        <property name="text">
+         <string>User fields configuration file:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1" colspan="2">
+       <widget class="Utils::PathChooser" name="nickNameFieldsFileChooser" native="true"/>
       </item>
      </layout>
     </widget>
