QmlDesigner: add resource for aspect ratio

--- a/src/plugins/qmldesigner/components/resources/resources.qrc
+++ b/src/plugins/qmldesigner/components/resources/resources.qrc
@@ -94,5 +94,7 @@
         <file>formeditorstylesheet.css</file>
         <file>images/scrollbar-borderimage-horizontal.png</file>
         <file>images/scrollbar-borderimage-vertical.png</file>
+        <file>images/aspectlockset.png</file>
+        <file>images/aspectlockoff.png</file>
     </qresource>
 </RCC>
