Port new dialog from QTreeWidget to QTreeView and QStandardItemModel
This is a preperation towards being able to present the dialog
in a different layout, with slightly improved usability.

Reviewed-by: jbache

--- a/src/plugins/coreplugin/dialogs/newdialog.ui
+++ b/src/plugins/coreplugin/dialogs/newdialog.ui
@@ -15,18 +15,13 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QTreeWidget" name="templatesTree">
+    <widget class="QTreeView" name="templatesTree">
      <property name="minimumSize">
       <size>
        <width>400</width>
        <height>301</height>
       </size>
      </property>
-     <column>
-      <property name="text">
-       <string>1</string>
-      </property>
-     </column>
     </widget>
    </item>
    <item>
